# ire-rag-llm

./: .gitignore  CHANGELOG.md  MakeFile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/faiss_blog/: index.faiss  index.pkl
scripts/: build_index.py  chat_cli.py  ingest.py  ingest2.py  ingest3.py  wiki_extract.py
src/ire_rag_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rag/: app.py  ask_cli.py  chain.py  chain2.py  chain_rag.py  chat_cli.py  conversational_chain.py  run_rag.py  run_retrieval.py  tools.py  vector.py
src/rag/legacy/: __init__.py  chain.py  run_rag.py  run_retrieval.py
