[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ire-rag-llm"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn>=0.22.0",
  "python-dotenv>=1.0.0",
  "langchain>=0.0.321",
  "langchain-huggingface>=0.0.29",
  "langchain-community>=0.0.81",
  "langchain-text-splitters>=0.3.9",
  "langchain-core>=0.3.72",
  "huggingface_hub>=0.16.4",
  "sentence-transformers>=2.2.2",
  "faiss-cpu>=1.7.2",
  "torch>=2.0.0",
  "beautifulsoup4>=4.12.2",
]

#tells setuptools to look inside /src
[tool.setuptools.packages.find]
where = ["src"] 

#creates the two console-scripts
[project.scripts]
run-retrieval = "rag.run_retrieval:main"
run-rag       = "rag.run_rag:main"

[tool.setuptools.packages.find]
where = ["src"]