[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ire-rag-llm"
version = "1.3.1"
description     = "RAG(LangGraph + local Ollama + FAISS)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "python-dotenv>=1.1.0",
  "langgraph>=0.6",
  "langchain>=0.3.27",
  "langchain-openai>=0.1.7",
  "langchain-google-genai>=2",
  "langchain-community>=0.3",
  "langchain-huggingface>=0.3",
  "langchain-text-splitters>=0.3",
  "langchain-core>=0.3.72",
  "beautifulsoup4>=4.12.2",
  "huggingface_hub>=0.34",
  "sentence-transformers>=2.2.2",
  "faiss-cpu>=1.11.0",
  "torch>=2.2",
  "mwparserfromhell",
  "mwxml",
  "typer",
  "pyreadline3"
]

#tells setuptools to look inside /src
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
 
[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
# Keep unused-imports as warnings project-wide; we already silence them per-file where needed
reportUnusedImport = "warning"


#creates the two console-scripts
[project.scripts]
rag-chat      = "rag.chat_cli:app"
rag-ask       = "rag.ask_cli:app"